262578989263/struct8-agent/templates/deployment-struct8-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: struct8-agent
  namespace: struct8-agent
  labels:
    app.kubernetes.io/name: struct8-agent
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: struct8-agent
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: struct8-agent
  template:
    metadata:
      labels:
        app: struct8-agent
    spec:
      serviceAccountName: deployment-struct8-agent-sa
      containers:
        - name: agent
          image: "ghcr.io/struct8/k8s-agent:0.4.0"
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          ports:
            - name: status
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
