262578989263/struct8-agent/templates/service-prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: struct8-agent
  labels:
    app.kubernetes.io/name: prometheus-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: struct8-agent
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 9090
      protocol: TCP
  selector:
    prometheus: prometheus
