262578989263/struct8-agent/templates/httproute-route-monitoring-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-monitoring-prometheus
  namespace: struct8-agent
  labels:
    struct8.io/origin: route-monitoring
    app.kubernetes.io/name: route-monitoring-prometheus
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: struct8-agent
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-svc
          namespace: struct8-agent
          port: 80
  hostnames:
    - prometheus.k8h.admin.billingpay.com.br
